# discordbot-showcase-public

./: .env.example  .gitignore  DEMO_SCRIPT.md  METRICS.md  NOTION_AGENT_INPUT.md  PUBLISH_CHECKLIST.md  README.md  SHOWCASE_BRIEF.md  pyproject.toml
assets/: README.md
docs/: architecture.md  decisions.md  demo-scenarios.md  engine-interface.md
src/: bot_entrypoint.py  engine_adapter.py
tests/: test_engine_adapter.py
